; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shader.c_gs_shader_get_param_info.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs-opengl/extr_gl-shader.c_gs_shader_get_param_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }
%struct.gs_shader_param_info = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gs_shader_get_param_info(%struct.TYPE_3__* %0, %struct.gs_shader_param_info* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.gs_shader_param_info*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store %struct.gs_shader_param_info* %1, %struct.gs_shader_param_info** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.gs_shader_param_info*, %struct.gs_shader_param_info** %4, align 8
  %9 = getelementptr inbounds %struct.gs_shader_param_info, %struct.gs_shader_param_info* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.gs_shader_param_info*, %struct.gs_shader_param_info** %4, align 8
  %14 = getelementptr inbounds %struct.gs_shader_param_info, %struct.gs_shader_param_info* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
